--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,16 @@
     package="ru.s1aks.mvp_login_activity">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MVP_Login_Activity">
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true" />
         <activity
             android:name=".ui.LoginActivity"
             android:exported="true">
